--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <li>Economics Research</li>
                         <li>Data Analysis</li>
                         <li>English (CET-6)</li>
-                        <li>Piano (Grade 8)</li>
+                        <li>Piano</li>
                     </ul>
                 </div>
 
